# BUAA-Compiler

./: CMakeLists.txt  README_zh.md  VarControl.cpp  VarControl.h  ast.cpp  ast.h  error.cpp  error.h  globalVar.h  grammar.cpp  grammar.h  lexical.cpp  lexical.h  main.cpp  midCode.cpp  midCode.h  mips.cpp  mips.h  readme.md  symbol.cpp  symbol.h  symbolTree.cpp  symbolTree.h  test.cpp
documents/: 2021 BUAA 编译原理设计文档.md  category.md  总结.md  文法总结.md  错误处理.md
test_data/: pcoderesult.txt  testfile.txt  未命名1.cpp
